# contenitzer

./: .gitignore  CLAUDE.md  README.md  hybrid_video_architecture.md  package-lock.json  package.json  research_findings.md  tasks.md
backend/: .env.example  GEMINI_MODEL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  add_column.py  celery_worker.py  check_scripts.py  contentizer.db-journal  main.py  pyproject.toml  requirements.txt  test_gemini_flash_image.py  test_script.txt  test_task_submission.py  verify_gemini_model.py
backend/migrations/: 001_add_video_generation_tables.py
backend/src/api/: content_planning.py  health.py  job_management.py  media.py  media_assets.py  media_browsing.py  script_upload.py  scripts.py  sessions.py  setup.py  tasks.py  trending.py  video_generation.py  video_serving.py  videos.py  websocket.py  workflow.py
backend/src/config/: static_files.py
backend/src/lib/: database.py  encryption.py  error_handlers.py  exceptions.py  ffmpeg_utils.py  file_validators.py  middleware.py  redis.py  storage.py  system_check.py  tasks.py  video_validator.py
backend/src/middleware/: upload_middleware.py
backend/src/models/: __init__.py  composed_video.py  configuration_profile.py  content_category.py  gemini_model_config.py  generated_theme.py  generated_video.py  generation_plan.py  media_asset.py  media_browsing.py  media_storage.py  service_status.py  setup_progress.py  test_execution.py  trending_content.py  uploaded_script.py  user_config.py  video_generation_job.py  video_project.py  video_script.py  workflow.py
backend/tests/: conftest.py
(+241 files in other folders)
